[package]
name = "rustling"
version = "0.8.1"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]

[workspace]
members = ["core", "ml"]

[dependencies]
rustling-core = { path="core"}
rustling-ml = { path="ml"}
error-chain = { version="0.11", default-features=false }
fnv = "1.0"
serde = "1.0"
serde_derive = "1.0"
