[package]
name = "rustling"
version = "0.9.0"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]
edition = "2018"

[workspace]
members = ["core", "ml"]

[dependencies]
rustling-core = { path = "core" }
rustling-ml = { path = "ml" }
failure = "0.1"
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
