[package]
name = "rustling-core"
version = "0.8.0"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
regex = "0.2"
smallvec = "0.3"
error-chain = { version="0.11", default-features=false }
string-interner = "0.3"
serde = "1.0"
serde_derive = "1.0"
