[package]
license = "Apache-2.0 OR MIT"
name = "rustling-core"
version = "0.9.1"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]
edition = "2018"

[dependencies]
regex = "1.0"
smallvec = "0.6"
failure = "0.1"
string-interner = "0.7"
serde = { version = "1.0", features = ["derive"] }
